src/objects/BT_CO_ARMS_CreateCustAccountResponseFile__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountCreationDate__c</fullName>
        <label>accountCreationDate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountNumber__c</fullName>
        <label>accountNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blacklistColourCode__c</fullName>
        <label>blacklistColourCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blacklistIndicator__c</fullName>
        <label>blacklistIndicator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blacklistReason__c</fullName>
        <label>blacklistReason</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrId__c</fullName>
        <label>ccrId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditRiskRating__c</fullName>
        <label>creditRiskRating</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerCreateDate__c</fullName>
        <label>customerCreateDate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>returnMessage__c</fullName>
        <label>returnMessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>returnStatus__c</fullName>
        <label>returnStatus</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>synonym__c</fullName>
        <label>synonym</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uniqueKey__c</fullName>
        <label>uniqueKey</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ARMS_CreateCustAccountResponseFile</label>
    <nameField>
        <label>BT_CO_ARMS_CreateCustAccountResponseFile</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ARMS_CreateCustAccountResponseFile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>